# wireguard-ui-backend

./: Cargo.toml  README.md
.github/workflows/: rust.yml  upload.yml
src/: main.rs  server.rs  wireguard.rs
src/data/: config.rs  data_manager.rs  mod.rs  wireguard_client.rs  wireguard_data.rs  wireguard_peer.rs  wireguard_server.rs
