[package]
name = "wireguard-ui-backend"
version = "0.1.0"
edition = "2021"
authors = ["dkim19375"]
repository = "https://github.com/dkim19375/wireguard-ui-backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.1.1"
axum = "0.7.5"
defguard_wireguard_rs = "0.4.2"
nix = "0.29.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9.34"
tokio = { version = "1.37.0", features = ["full"] }
uuid = { version = "1.9.1", features = ["serde"] }
